@@ -252,6 +252,12 @@ Server = %(HOSTNAME)s
 ; 
 ;; ConfigFile = /var/lib/globus-connect-server/myproxy-server.conf
 
+; Maximum Proxy certificate lifetime (in hours). When activating the endpoint,
+; Globus will request a certificate of 11 days (264 hours). If this value
+; is less than 11 days, then the certificate lifetime will be limited by this
+; value
+;; MaxCertLifetime = 168
+
 [OAuth]
 ; The public host name of the MyProxy OAuth server. 
 ; If not set, then no MyProxy Oauth server will be configured. The special value
