@@ -1,3 +1,9 @@
+globus-connect-server (4.0.60-1+gt6.@distro@) @distro@; urgency=low
+
+  * add new configuration option for myproxy maximum cert lifetime
+
+ -- Globus Toolkit <support@globus.org>  Wed, 16 Sep 2020 14:00:00 -0400
+
 globus-connect-server (4.0.59-3+gt6.@distro@) @distro@; urgency=low
 
   * Change myproxy-oauth dependency to allow it to be excluded
